# Server-Failure-Prediction-System-MLops

./: .gitignore  DEMO_GUIDE.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  HOW_IT_WORKS_ANSWERS.md  HOW_WEBSITE_DOWNTIME_DETECTION_WORKS.md  INTERVIEW_PREP_ML_DRIFT.md  ML_HEALTH_GUARD_PLAN.md  README.md  SELLABLE_PRODUCT_BLUEPRINT.md  demo_data_loader.py  docker-compose.yml  helpreference.md  implementation_plan.md  netlify.toml  render.yaml  task.md
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_change_events.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: alerts.py  assets.py  auth.py  copilot.py  dashboard.py  ingest.py  mcp.py  ml.py  ml_guard.py  notifications.py  predictions.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  automation_scheduler.py  change_intelligence.py  email_service.py  notification_orchestrator.py  risk_alert_service.py  risk_engine.py  telemetry_adapter.py  telemetry_normalizer.py  webhook_service.py
backend/tests/: conftest.py
backend/tests/agent/: __init__.py  test_copilot.py
backend/tests/api/: test_api.py  test_phase1_smoke.py  test_phase2_smoke.py  test_phase3_smoke.py  test_phase4_smoke.py  test_phase5_smoke.py  test_phase6_smoke.py
backend/tests/ml/: __init__.py  test_anomaly_detector.py  test_log_analyzer.py  test_rul_forecaster.py
frontend/: .env.example  .eslintrc.json  next.config.mjs  package-lock.json  package.json  (+1 more)
ml/: __init__.py  pyproject.toml
ml/agent/: __init__.py  copilot.py  event_monitor.py  llm_provider.py  notification_provider.py  ticket_provider.py
ml/guard/: drift.py
ml/mcp/: __init__.py  server.py
ml/models/: __init__.py  anomaly_detector.py  log_analyzer.py  rul_forecaster.py
ml/pipelines/: __init__.py  drift_detection.py  inference_pipeline.py  training_pipeline.py
ml/services/: __init__.py  ml_service.py
(+15 files in other folders)
