[project]
name = "predictr-ml"
version = "0.1.0"
description = "PredictrAI ML Pipeline - Production-ready predictive maintenance models"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    
    # Deep Learning
    "torch>=2.2.0",
    
    # Explainability
    "shap>=0.44.0",
    
    # Clustering
    "hdbscan>=0.8.33",
    
    # MLOps
    "mlflow>=2.10.0",
    "evidently>=0.4.0",
]

[project.optional-dependencies]
nlp = [
    "sentence-transformers>=2.3.0",
    "transformers>=4.37.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
